# py-lists

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  todo.md
app/: deps.py  field_types.py  main.py  migration.py  models.py  persistence.py  repositories.py  schemas.py  seeder.py
app/static/: index.html
